--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,7 @@ body {
   margin-right: 10px;
   fill: currentColor;
 }
+.current::after
 
 /* -----------------------------Hero------------------------------ */
 .hero {
