--- a/css/styles.css
+++ b/css/styles.css
@@ -529,6 +529,7 @@ body {
 }
 .portfolio-position {
   position: relative;
+  overflow: hidden;
 }
 .portfolio-text-posinion {
   position: absolute;
@@ -538,6 +539,11 @@ body {
   height: 100%;
   background: rgba(33, 150, 243, 0.9);
   padding: 63px 24px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-link:hover .portfolio-text-posinion {
+  transform: translateY(0);
 }
 .portfolio-text {
   font-weight: normal;
@@ -627,4 +633,52 @@ body {
 }
 .footer-icon {
   fill: var(--white-text-color);
+}
+/*--------------Модальное окно-------------------------------*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: none;
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.8);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  min-height: 580px;
+  min-width: 530px;
+  background-color: var(--header-background);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-modal {
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: flex;
+  padding: 10px;
+  margin-top: 8px;
+  margin-right: 8px;
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  border-radius: 50px;
 }
