--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--header-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-link-item:not(:last-child) {
   margin-right: 50px;
@@ -102,6 +103,7 @@ body {
   letter-spacing: 0.02em;
   align-items: center;
   color: var(--second-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link.link-tel:hover,
 .link.link-mail:hover,
@@ -212,12 +214,14 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   color: var(--hero-button-text-color);
-  background: var(--hero-button-background);
+  background-color: var(--hero-button-background);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
 .hero-button:focus {
-  background: #188ce8;
+  background-color: #188ce8;
 }
 /* -----------------------Особенности--------------------------- */
 .flex-propet {
@@ -294,16 +298,18 @@ body {
 }
 .img-position {
   position: relative;
+  display: block;
 }
+
 .work-position {
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: 2px;
   width: 100%;
   height: 70px;
   background: rgba(47, 48, 58, 0.8);
   padding-top: 27px;
-  padding-left: 27px;
+  padding-bottom: 27px;
 }
 .text-work-item {
   font-weight: bold;
@@ -397,10 +403,11 @@ body {
   height: 44px;
   background-color: var(--header-background);
   border-radius: 50%;
-  /* outline: 1px solid red; */
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .author-icon {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* ---------------Постоянные клиенты------------------------ */
 .clients {
@@ -426,11 +433,13 @@ body {
   border: 1px solid #afb1b8;
   box-sizing: border-box;
   border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-icon {
   width: 106px;
   height: 60px;
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-icon-link:hover .client-icon {
   fill: var(--accent-text-color);
@@ -471,13 +480,17 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--second-button-text-color);
-  background: var(--button-inactive-background);
+  background-color: var(--button-inactive-background);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .second-btn .second-btn-item:hover,
 .second-btn .second-btn-item:focus {
   color: var(--hero-button-text-color);
-  background: var(--button-active-background);
+  background-color: var(--button-active-background);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* ---------------------Наши проекты в портофолио----------------------- */
 
@@ -629,7 +642,7 @@ body {
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
-  /* outline: 1px solid red; */
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icon {
   fill: var(--white-text-color);
@@ -669,12 +682,10 @@ body {
 }
 .btn-modal {
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 8px;
+  top: 8px;
   display: flex;
   padding: 10px;
-  margin-top: 8px;
-  margin-right: 8px;
   width: 30px;
   height: 30px;
   background: #ffffff;
