--- a/css/styles.css
+++ b/css/styles.css
@@ -661,7 +661,7 @@ body {
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
-  visibility: none;
+  visibility: hidden;
 }
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.8);
