--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ body {
 }
 .link.curren {
   color: #2196f3;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container {
   width: 1200px;
